--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <div id="text-box"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias non maxime eveniet veniam et sunt, cumque fuga illum at fugit.</p>
 </body>
 </html>
